# raster

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deploy-docs.sh  rustfmt.toml  search-index.js
dev/: notes.md
docs/: aliases.js  search-index.js
docs/adler32/: fn.adler32.html  index.html  struct.RollingAdler32.html
docs/arrayvec/: index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html  struct.IntoIter.html
docs/bitflags/: index.html  macro.bitflags.html
docs/byteorder/: enum.BigEndian.html  enum.LittleEndian.html
docs/coco/: index.html
docs/color_quant/: index.html  struct.NeuQuant.html
docs/deflate/: all.html  enum.Compression.html  enum.MatchingType.html  enum.SpecialOptions.html  fn.deflate_bytes.html  fn.deflate_bytes_conf.html  fn.deflate_bytes_zlib.html  fn.deflate_bytes_zlib_conf.html  index.html  struct.CompressionOptions.html
docs/either/: enum.Either.html  index.html  macro.try_left.html  macro.try_right.html
docs/enum_primitive/: enum.Option.html  index.html  macro.enum_from_primitive.html  macro.enum_from_primitive_impl.html  macro.enum_from_primitive_impl_ty.html  trait.FromPrimitive.html
docs/gif/: enum.Block.html  enum.ColorOutput.html  enum.Decoded.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.Extension.html  enum.ExtensionData.html  enum.Extensions.html  enum.Repeat.html  index.html  struct.Decoder.html  struct.Encoder.html  struct.Frame.html  struct.MemoryLimit.html  struct.Reader.html  struct.StreamingDecoder.html  trait.Parameter.html  trait.SetParameter.html
docs/image/: all.html  enum.ColorType.html  enum.DecodingResult.html  (+37 more)
raster/: index.html  sidebar-items.js
src/: _main.rs  blend.rs  color.rs  compare.rs  editor.rs  endec.rs  error.rs  filter.rs  image.rs  interpolate.rs  lib.rs  position.rs  transform.rs
tests/: color_tests.rs  filter_tests.rs  integration_tests.rs  io_tests.rs
(+2191 files in other folders)
