[package]
name = "raster"
version = "0.2.0"
license = "MIT"
authors = ["kosinix <kosinix@users.noreply.github.com>"]
exclude = [
    "main.rs",
    "dev/*",
    "tests/*",
]
keywords = [
    "image", "image-processing"
]
readme = "README.md"
description = "Image processing lib for Rust"
documentation = "https://docs.rs/raster/"
homepage = "https://github.com/kosinix/raster"
repository = "https://github.com/kosinix/raster.git"

[dependencies.image]
version = "0.10.3"
default-features = false
features = ["jpeg", "ico"]

[dependencies.gif]
version = "0.9.0"

[dependencies.png]
version = "0.5.2"